--- a/public/admin.html
+++ b/public/admin.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin Panel - Property Brokerage</title>
     <link
-      href="http://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
-      href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
   </head>
   <body class="theme-dark">
@@ -97,6 +97,7 @@
                         class="form-control mb-2"
                         placeholder="Admin Name"
                         autocomplete="name"
+                        required
                       />
                       <input
                         type="email"
@@ -104,6 +105,7 @@
                         class="form-control mb-2"
                         placeholder="Admin Email"
                         autocomplete="email"
+                        required
                       />
                       <input
                         type="tel"
@@ -111,6 +113,7 @@
                         class="form-control mb-2"
                         placeholder="Admin Phone"
                         autocomplete="tel"
+                        required
                       />
                       <input
                         type="text"
@@ -532,6 +535,7 @@
                         name="admin_name"
                         id="edit-admin-name"
                         placeholder="Admin Name"
+                        required
                       />
                     </div>
                     <div class="col-12 col-md-4">
@@ -541,6 +545,7 @@
                         name="admin_email"
                         id="edit-admin-email"
                         placeholder="Admin Email"
+                        required
                       />
                     </div>
                     <div class="col-12 col-md-4">
@@ -550,6 +555,7 @@
                         name="admin_phone"
                         id="edit-admin-phone"
                         placeholder="Admin Phone"
+                        required
                       />
                     </div>
                   </div>
@@ -878,7 +884,7 @@
         </div>
       </div>
     </div>
-    <script src="http://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- cache-bust to ensure latest admin logic -->
     <script src="script.js?v=admin8"></script>
     <script src="i18n.js"></script>
